Bug 502423 - "You missed some notifications" notification that appears after exiting DND mode isn't actionable
Summary: "You missed some notifications" notification that appears after exiting DND m...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: 6.2.90
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: usability
: 506069 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-04-04 19:45 UTC by Nate Graham
Modified: 2025-06-28 10:14 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-04-04 19:45:33 UTC
STEPS TO REPRODUCE
1. Enter DND mode
2. run `notify-send-send foo bar` in a terminal window
3. Exit DND mode -> A notification appears telling me I missed a notification while DND mode was active


OBSERVED RESULT
The notification doesn't help me see the missed notification. I need to figure out on my own how to find it.


EXPECTED RESULT
The notification somehow helps me see the missed notification: there's a button to open the history popup, and clicking the background does the same thing.
Comment 1 Nate Graham 2025-06-24 18:52:29 UTC
*** Bug 506069 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2025-06-24 21:53:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5626
Comment 3 Bug Janitor Service 2025-06-24 21:53:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5626
Comment 4 Kristen McWilliam 2025-06-24 23:57:53 UTC
Git commit 9fabf42c39a25308739dd3483881cc889243bf58 by Kristen McWilliam.
Committed on 24/06/2025 at 21:44.
Pushed by merritt into branch 'master'.

applets/notifications: Add actions to missed notifications notification

When a notification is displayed informing the user that notifications were missed while in Do Not
Disturb, now clicking the button or the notification itself will open the notifications applet to
show the missed notifications.

M  +10   -0    applets/notifications/package/contents/ui/main.qml
M  +25   -9    libnotificationmanager/notifications.cpp
M  +7    -0    libnotificationmanager/notifications.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/9fabf42c39a25308739dd3483881cc889243bf58