applets/notifications: Add actions to missed notifications notification

When a notification is displayed informing the user that notifications were missed while in Do Not
Disturb, now clicking the button or the notification itself will open the notifications applet to
show the missed notifications.

BUG: 502423