libnotificationmanager/notifications.cpp
@@ -903,15 +903,31 @@ void Notifications::showInhibitionSummary(Urgency urgency, const QStringList &bl
         return;
     }
 
-    KNotification::event(u"inhibitionSummary"_s,
-                         i18ncp("@title", "Unread Notification", "Unread Notifications", inhibited),
-                         i18ncp("@info",
-                                "%1 notification was received while Do Not Disturb was active.",
-                                "%1 notifications were received while Do Not Disturb was active.",
-                                inhibited),
-                         u"preferences-desktop-notification-bell"_s,
-                         KNotification::CloseOnTimeout,
-                         u"libnotificationmanager"_s);
+    KNotification *notification = new KNotification(u"inhibitionSummary"_s);
+    notification->setTitle(i18ncp("@title", "Unread Notification", "Unread Notifications", inhibited));
+    notification->setText(i18ncp("@info",
+                                 "%1 notification was received while Do Not Disturb was active.",
+                                 "%1 notifications were received while Do Not Disturb was active.",
+                                 inhibited));
+    notification->setIconName(u"preferences-desktop-notification-bell"_s);
+    notification->setFlags(KNotification::CloseOnTimeout);
+    notification->setComponentName(u"libnotificationmanager"_s);
+
+    const QString showNotificationsText = i18nc( //
+        "@action:button Show the notifications popup; translate this in as short a form as possible",
+        "Show Notifications");
+
+    const KNotificationAction *defaultShowNotificationsAction = notification->addDefaultAction(showNotificationsText);
+    connect(defaultShowNotificationsAction, &KNotificationAction::activated, this, [this]() {
+        Q_EMIT showNotificationsRequested();
+    });
+
+    const KNotificationAction *showNotificationsAction = notification->addAction(showNotificationsText);
+    connect(showNotificationsAction, &KNotificationAction::activated, this, [this]() {
+        Q_EMIT showNotificationsRequested();
+    });
+
+    notification->sendEvent();
 }
 
 QVariant Notifications::data(const QModelIndex &index, int role) const
